2014-09-16  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed gardening, skip one more tests on Windows.

        * Scripts/run-javascriptcore-tests:

2014-09-16  Csaba Osztrogonác  <ossy@webkit.org>

        JSC test gardening
        https://bugs.webkit.org/show_bug.cgi?id=136823

        Reviewed by Geoffrey Garen.

        * Scripts/run-javascriptcore-tests: Skip tests on only the affected platforms.

2014-09-16  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        Remove shouldAbortEarly cruft from master.cfg
        https://bugs.webkit.org/show_bug.cgi?id=136779

        Reviewed by Csaba Osztrogonác.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (ConfigureBuild.start):
        (RunWebKitTests.start):
        (RunWebKit2Tests.start): Deleted.

2014-09-15  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>

        Remove ORWT related crufts from webkitdirs.pm
        https://bugs.webkit.org/show_bug.cgi?id=136821

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitdirs.pm:
        (isPerianInstalled): Deleted.
        (determineIPhoneSimulatorVersion): Deleted.
        (iPhoneSimulatorVersion): Deleted.
        (isSnowLeopard): Deleted.
        (isLion): Deleted.
        (quitIOSSimulator): Deleted.

2014-09-15  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Skip yet another ecma/Date test that fails only on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=25160

        * Scripts/run-javascriptcore-tests:

2014-09-15  Lucas Forschler  <lforschler@apple.com>

        Add another Apple build slave to the Mountain Lion Debug WK1 queue
        
        Rubber stamped by Matt Hanson.
        
        * BuildSlaveSupport/build.webkit.org-config/config.json:

2014-09-15  Grzegorz Czajkowski  <g.czajkowski@samsung.com>

        [EFL] Ecore and Eina are initialized twice in TestWebKitAPI
        https://bugs.webkit.org/show_bug.cgi?id=136822

        Reviewed by Gyuyoung Kim.
