@@ -1,3 +1,14 @@
+2014-09-12  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Mac queue slaves should reboot every so often
+        https://bugs.webkit.org/show_bug.cgi?id=136791
+
+        Reviewed by Alexey Proskuryakov.
+
+        Reboot Mac queue slaves every night between 1 A.M. and 6 A.M.
+
+        * EWSTools/start-queue-mac.sh:
+
 2014-09-16  Csaba Osztrogonác  <ossy@webkit.org>
 
         Unreviewed gardening, skip one more tests on Windows.
